--- a/IFT604Projet/IFT604Projet/Views/Home/Index.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Home/Index.cshtml
@@ -3,12 +3,16 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>BombSquad</h1>
+    <p class="lead">Bienvenue sur le client web de BombSquad.</p>
+    <!--<p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>-->
 </div>
 
-<div class="row">
+<div class="container">
+    <h1>Présentation</h1>
+    <p>Projet de fin de session pour le cours IFT-604, Applications Internet et mobilité.</p>
+    <p>BombSquad est un jeu de désamorçage de bombe en équipe.</p>
+    <p></p>
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
@@ -28,4 +32,8 @@
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
+
+    
 </div>
+
+
