Added profile avatar. Corrected UI of partial layout. Removed unuesed link in layout.

--- a/IFT604Projet/IFT604Projet/Views/Shared/_LoginPartial.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Shared/_LoginPartial.cshtml
@@ -1,16 +1,38 @@
-﻿@using Microsoft.AspNet.Identity
+﻿@using IFT604Projet.Models
+@using Microsoft.AspNet.Identity
+@using Microsoft.AspNet.Identity.EntityFramework
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
     @Html.AntiForgeryToken()
 
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                @{
+                    string imgSrc = "";
+
+                    if (Request.IsAuthenticated)
+                    {
+                        var manager = new UserManager<ApplicationUser>(new UserStore<ApplicationUser>(new ApplicationDbContext()));
+                        var currentUser = manager.FindById(User.Identity.GetUserId());
+
+                        var base64 = Convert.ToBase64String(currentUser.Avatar);
+                        imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                    }
+
+                }
+
+                <img src="@imgSrc" width="50" height="50"/>
+            </li>
+            <li>
+                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new
+                {
+                    title = "Manage"
+                })
+            </li>
+            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        </ul>
     }
 }
 else
