--- a/IFT604Projet/IFT604Projet/Views/Account/Register.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Account/Register.cshtml
@@ -5,7 +5,7 @@
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
@@ -17,6 +17,20 @@
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.Region, new
+   {
+       @class = "col-md-2 control-label"
+   })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Region, new
+       {
+           @class = "form-control"
+       })
+        </div>
+    </div>
+
     <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -24,11 +38,25 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.ConfirmPassword, new
+   {
+       @class = "col-md-2 control-label"
+   })
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+            @Html.PasswordFor(m => m.ConfirmPassword, new
+       {
+           @class = "form-control"
+       })
         </div>
     </div>
+
+    <div class="form-group">
+         @Html.LabelFor(m => m.UploadImage, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            <input type="file" name="UploadImage" class="form-control" />
+        </div>
+    </div>
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
