--- a/IFT604Projet/IFT604Projet/Views/Account/Register.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Account/Register.cshtml
@@ -19,12 +19,12 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.Region, new
+        @Html.LabelFor(m => m.RegionId, new
    {
        @class = "col-md-2 control-label"
    })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Region, new
+            @Html.DropDownList("RegionId", ViewBag.RegionId as SelectList, String.Empty, new
        {
            @class = "form-control"
        })
@@ -51,7 +51,7 @@
     </div>
 
     <div class="form-group">
-         @Html.LabelFor(m => m.UploadImage, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.UploadImage, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             <input type="file" name="UploadImage" class="form-control" />
         </div>
