Moved ViewModels definition in separate folder. Corrected references. Added username specification in registration and corrected logins. Added links to regions and rankings.

--- a/IFT604Projet/IFT604Projet/Views/Account/ResetPassword.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model IFT604Projet.Models.ResetPasswordViewModel
+﻿@model IFT604Projet.ViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
