--- a/IFT604Projet/IFT604Projet/Views/Account/SendCode.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model IFT604Projet.Models.SendCodeViewModel
+﻿@model IFT604Projet.ViewModels.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
