--- a/IFT604Projet/IFT604Projet/Views/Account/VerifyCode.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model IFT604Projet.Models.VerifyCodeViewModel
+﻿@model IFT604Projet.ViewModels.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
