--- a/IFT604Projet/IFT604Projet/Views/Manage/ChangePassword.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model IFT604Projet.Models.ChangePasswordViewModel
+﻿@model IFT604Projet.ViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
