--- a/IFT604Projet/IFT604Projet/Views/Manage/SetPassword.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model IFT604Projet.Models.SetPasswordViewModel
+﻿@model IFT604Projet.ViewModels.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
