--- a/IFT604Projet/IFT604Projet/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model IFT604Projet.Models.VerifyPhoneNumberViewModel
+﻿@model IFT604Projet.ViewModels.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
