--- a/IFT604Projet/IFT604Projet/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model IFT604Projet.Models.ExternalLoginConfirmationViewModel
+﻿@model IFT604Projet.ViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
