--- a/IFT604Projet/IFT604Projet/Views/Account/ForgotPassword.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model IFT604Projet.Models.ForgotPasswordViewModel
+﻿@model IFT604Projet.ViewModels.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
