--- a/IFT604Projet/IFT604Projet/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model IFT604Projet.Models.ExternalLoginListViewModel
+﻿@model IFT604Projet.ViewModels.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
