--- a/IFT604Projet/IFT604Projet/Views/Manage/AddPhoneNumber.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model IFT604Projet.Models.AddPhoneNumberViewModel
+﻿@model IFT604Projet.ViewModels.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
