--- a/IFT604Projet/IFT604Projet/Views/Manage/ManageLogins.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model IFT604Projet.Models.ManageLoginsViewModel
+﻿@model IFT604Projet.ViewModels.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
