--- a/IFT604Projet/IFT604Projet/Views/Shared/_Layout.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Bomb Squad</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -25,6 +25,8 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Event", "EventMap", "EventMap")</li>
+                    <li>@Html.ActionLink("Regions", "Index", "Region")</li>
+                    <li>@Html.ActionLink("Rankings","Index","Rankings")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -32,10 +34,7 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+        <hr/>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
