--- a/IFT604Projet/IFT604Projet/Views/Shared/_Layout.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Event", "EventMap", "EventMap")</li>
+                    <li>@Html.ActionLink("Events", "Index", "Events")</li>
                     <li>@Html.ActionLink("Regions", "Index", "Region")</li>
                     <li>@Html.ActionLink("Rankings","Index","Rankings")</li>
                 </ul>
