Added bootstrap nuget for DateTimePicking. Added GameEvent Service.

--- a/IFT604Projet/IFT604Projet/Views/Events/Index.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Events/Index.cshtml
@@ -102,7 +102,8 @@
 
 <div class="jumbotron">
     <h1>Events</h1>
-    <p class="lead">Évènement en cours.</p>
+    <p class="lead">Ongoing events</p>
+    @Html.ActionLink("Create new event","Create","Events")
 </div>
 
 <div id="googleMap" style="height:850px">
