--- a/IFT604Projet/IFT604Projet/Views/Account/Register.cshtml
+++ b/IFT604Projet/IFT604Projet/Views/Account/Register.cshtml
@@ -30,7 +30,7 @@
        @class = "col-md-2 control-label"
    })
         <div class="col-md-10">
-            @Html.DropDownList("RegionId", ViewBag.RegionId as SelectList, String.Empty, new
+            @Html.DropDownList("RegionId", ViewBag.RegionId as SelectList, string.Empty, new
        {
            @class = "form-control"
        })
